# A-maze-ing-42

./: .gitignore  CHANGELOG.md  CODE_EXPLANATION.md  FILE_AND_FUNCTIONS.md  LICENSE  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  maze_42_generator.py  maze_renderer.py  maze_validator.py  mazegen-1.0.0-py3-none-any.whl  pathfinder.py  pyproject.toml  requirements.txt  test_maze.py  utils.py
a_maze_ing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mazegen/: __init__.py  __main__.py  animate.py  ascii_renderer.py  config_parser.py  curses_renderer.py  forth_two.py  maze_42_generator.py  maze_generator.py  maze_renderer.py  maze_validator.py  output_writer.py  parser.py  path_finder.py  pathfinder.py  position_selector.py  render.py  utils.py
tests/: test_maze.py
